--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,10 @@ ul, ol {
   list-style: none;
 }
 
+p {
+  margin: 0;
+}
+
 footer {
   position: absolute;
   height: 44px;
@@ -86,39 +90,36 @@ a {
   padding: 0 10px;
 }
 
+.nav-right {
+  font-family: 'lato';
+  font-size: 14px;
+  position: relative;
+  top: 50%;
+  transform: translateY(15%);
+}
+
+.nav-right p {
+}
+
 .video-container {
-  padding: 40px 80px;
+  /*padding: 40px 80px;*/
+  width: 100%;
   text-align: center;
   position: relative;
 }
 
-.video-bg {
+.video-bg-container {
   text-align: center;
-}
-
-.chevron-blank {
-  display: inline-block;
-  position: absolute;
-  top: 40px;
-  left: 50%;
-  background-color:white;
-  width: 40px;
-  height: 300px;
-  -webkit-transform: skew(-10deg) translateX(-50%);
-     -moz-transform: skew(-10deg) translateX(-50%);
-       -o-transform: skew(-10deg) translateX(-50%);
-}
-
-.chevron {
-  display: inline-block;
-  background-color: green;
-  width: calc(60% - 100px);
-  height: 300px;
-  -webkit-transform: skew(0deg);
-     -moz-transform: skew(0deg);
-       -o-transform: skew(0deg);
+  width: 100vw;
+  height: 600px;
   overflow: hidden;
 }
+
+.video-bg-file {
+  width: 100%;
+  height: auto;
+}
+
 
 .chevron-text {
   display: inline-block;
@@ -175,22 +176,108 @@ a {
 }
 
 .video-bg-file {
-  position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
   display: inline-block;
-  width: 50vw;
+  width: 130vw;
   height: auto;
+  min-height: 600px;
+}
+
+.button-container {
+  float: left;
+  position: relative;
+  bottom: 10em;
+  z-index: 10;
+  padding: 35px;
+}
+
+.button-info {
+  margin-bottom: 10px;
+  width: 450px;
 }
 
 .button {
+  font-family: 'lato';
+  text-transform: uppercase;
   border: 2px solid black;
   padding: 5px 10px;
+  width: 100px;
+  text-align: center;
+  display: inline-block;
+  margin-right: 40px;
 }
 
 .button:hover {
   background-color: black;
   color: white;
-  border: 2px solid white;
+}
+
+.video-header {
+  font-size: 1.5em;
+  font-family: 'Playfair Display';
+  text-align: left;
+  padding: 0 30px;
+  width: auto;
+  max-width: 800px;
+  position: relative;
+  z-index: 5;
+  color: white;
+}
+
+.video-header h1 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  line-height: 1em;
+}
+
+.video-header p {
+  margin-top: 10px;
+  font-family: 'lato';
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+.class-list-item {
+  font-family: 'Lato';
+  font-weight: 300;
+  font-size: 1em;
+  text-align: center;
+  display: inline-block;
+  background-color: black;
+  color: white;
+  position: relative;
+  z-index: 11;
+  padding: 8px 8px;
+  width: auto;
+  text-align: center;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.class-list-container {
+  position: relative;
+  left: 0;
+  width: 80%;
+  height: auto;
+  min-height: 50px;
+  padding: 30px;
+  text-align: left;
+}
+
+.top-container {
+  float: left;
+  position: absolute;
+  top: 0px;
+}
+
+.video-header-container {
+  background-color: rgba(0,0,0,0.8);
+  width: 100vw;
+  height: auto;
+  padding-bottom: 20px;
+  min-height: 150px;
+  display: inline-block;
+  top: 0px;
 }
