--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,9 @@ html
     link(rel='stylesheet', href='/css/flexboxgrid.css')
     link(rel='stylesheet', href='/css/main.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=PT+Sans:400,700')
-      
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700')
+
   body
     #app!= html
     script.
