--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,8 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=PT+Sans:400,700')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700')
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
 
   body
     #app!= html
