--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@ html {
 body {
   margin: 0;
   font-family: "PT sans";
+  overflow-x: hidden;
 }
 
 ul, ol {
@@ -20,13 +21,14 @@ footer {
   display: inline-block;
   width: 100%;
   color: white;
-  background-color: rgba(0,0,0,0.85);
+  background-color: rgba(0,0,0,0.9);
   margin-top: 30px;
-  height: 44px;
+  height: 60px;
   bottom: 0;
   padding: 0 30px;
   font-family: 'lato';
   font-weight: 300;
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
 }
 
 footer p {
@@ -59,6 +61,11 @@ a {
  * Generics 
  * 
  */
+
+ .appbar {
+  position: relative;
+  z-index: 5;
+ }
 
  .material-icons {
   font-family: 'Material Icons';
@@ -471,6 +478,7 @@ a {
   color: white;
   margin: 0 10px;
   margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
 }
 
 .underline {
