--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel='stylesheet', href='/css/normalize.css')
     link(rel='stylesheet', href='/css/flexboxgrid.css')
     link(rel='stylesheet', href='/css/main.css')
+    link(href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css", rel="stylesheet", integrity="sha384-awusxf8AUojygHf2+joICySzB780jVvQaVCAt1clU3QsyAitLGul28Qxb2r1e5g+", crossorigin="anonymous")  
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=PT+Sans:400,700')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700')
