--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,9 +17,30 @@ p {
   margin: 0;
 }
 
-:focus {
+.form-control:focus {
   outline: none;
   border: none;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+input {
+  box-shadow: none !important;
+  -webkit-box-shadow: none !important; 
+}
+
+input:focus {
+  box-shadow: none !important;
+  -webkit-box-shadow: none !important; 
+}
+
+input[type=text]:focus {
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+textarea:focus {
+  box-shadow: none;
 }
 
 button:focus {
@@ -517,6 +538,23 @@ a {
   padding-top: 15px;
   font-size: 16px;
   font-family: 'lato';
+}
+
+.enroll-form-control {
+    -webkit-box-shadow: inset 0 -2px 0 rgb(0, 188, 212) !important;
+    box-shadow: inset 0 -2px 0 rgb(0, 188, 212) !important;
+}
+
+.form-left {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.form-right {
+  display: inline-block;
+  vertical-align: top;
+  float: right;
+  padding: 20px;
 }
 
 #about {
