--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,21 @@ iframe {
   border: none;
 }
 
+#home {
+  background-color: rgba(0,0,0,0);
+  box-shadow: none;
+  z-index: 1;
+  position: absolute;
+  padding: 10px 35px;
+}
+
+#else {
+  background-color: #003262;
+  box-shadow: 'none';
+  z-index: 1;
+  padding: 10px 35px;
+}
+
 .background-tint {
   background-color: rgba(80, 79, 79, 0.3) !important;
   background-blend-mode: multiply;
@@ -29,6 +44,10 @@ iframe {
 .background-tint-more {
   background-color: rgba(80, 79, 79, 0.4) !important;
   background-blend-mode: multiply;
+}
+
+.ProfileForm > input {
+  display: inline-block;
 }
 
 .navlink:hover {
