--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ html
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700")
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
-
+    link(rel="icon", type="image/png", href="/images/favicon.png", sizes="32x32")
   body
     #app!= html
     script.
