Implemented Google Authentication. Need to address UX bugs after enrolling in a class. Hid Create and Add video features based on User Role.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     meta(charset='utf-8')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='google-signin-client_id', content="435893323323-97hp77hk303d5m54glch3a76ml2998uf.apps.googleusercontent.com")
     title= title
     link(rel='stylesheet', href='/css/normalize.css')
     link(rel='stylesheet', href='/css/flexboxgrid.css')
